# Slashydbot

./: .gitignore  .replit  Dockerfile  README.md  Webserver.py  cloudbuild.yaml  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  slashydbot.py
src/: Webserver.py  __init__.py  bot_admin_commands.py  bot_commands.py  main.py  openai_commands.py  utils.py
tests/: test_bot_commands.py
