[tool.poetry]
name = "repl_python3_Slashydbot"
version = "0.1.0"
description = ""
authors = ["shashwot2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
youtube_dl = "^2021.12.17"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
